# Rasoi-Stories

./: .gitignore  LICENSE  ai_utils.py  app.py  changelog.md  contibuting.md  contributing.md  database.py  ingredients.txt  pyproject.toml  rasoi.db  readme.md  report.md  requirements.txt
.gitlab/issue_templates/: Bug.md
.gitlab/merge_request_templates/: Default.md
