[project]
name = "RasoiStories"
version = "1.0.0"
description = "A community-driven digital cookbook to preserve and share India's diverse culinary heritage."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "streamlit",
    "pandas",
    "torch",
    "sentence-transformers",
    "Pillow"
]